<?xml version="1.0"?>
<package format="2">
  <name>test_sub</name>
  <version>0.0.0</version>
  <description>The test_sub package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="xxx@xxx.com">tad imokawa</maintainer>

  <license>BSD</license>
  <build_depend>roscpp</build_depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>
